--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css" type="text/css">
+
 </head>
 <body>
+    <header>
 
+    </header>
+
+    <main>
+<p>
+    ssssssssshhsss
+</p>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
